<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:="@+id/button1"
            android:onClick="ShowDescription"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btnPercent"
            android:textColor="@android:color/red"

            android:textSize="35sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnC"
            android:textColor="@android:color/red"
            android:textSize="35sp" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnDel"
            android:textColor="@android:color/red"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnDevide"
            android:textColor="@android:color/red"
            android:textSize="35sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn7"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn8"
            android:textSize="35sp" />


        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnMultiply"
            android:textColor="@android:color/red"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn4"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn5"
            android:textSize="35sp" />


        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn6"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnMinus"
            android:textColor="@android:color/red"
            android:textSize="35sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn1"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn2"
            android:textSize="35sp" />


        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btn3"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnPlus"
            android:textColor="@android:color/red"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnMinusAndPlus"
            android:textColor="@android:color/red"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnZero"
            android:textSize="35sp" />


        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnDot"
            android:textColor="@android:color/red"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:text="@string/btnEqual"
            android:textColor="@android:color/red"
            android:textSize="35sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/messageWindow"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>